# sismos-rs

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  fly.toml
database/test/: sismos.test.db
fetch-data/: Cargo.toml
fetch-data/src/: main.rs
sismos/: Cargo.toml  Dockerfile  fly.toml
sismos-api/: Cargo.toml
sismos-api/src/: api.rs  main.rs
sismos-api/tests/: test_api.rs  utils.rs
sismos-api/tests/data/: sismos.test.db
sismos-lib/: Cargo.toml
sismos-web/: Cargo.toml  Trunk.toml  index.css  index.html  package-lock.json  package.json  run.sh
sismos-web/src/: main.rs
sismos/src/: api.rs  bot.rs  fetch_data.rs  ineter.rs  lib.rs  main.rs  models.rs
sismos/src/data/: query.sismos.ai.txt
sismos/tests/: test_api.rs  test_ineter.rs  utils.rs
src/: api.rs  bot.rs  fetch_data.rs  ineter.rs  lib.rs  main.rs  models.rs
src/data/: query.sismos.ai.txt
tests/: api_test.rs  fetch_data_test.rs  ineter_test.rs  test_api.rs  test_ineter.rs  utils.rs
tests/data/: sismos.0.php.html  sismos.test.db
