[package]
name = "sismos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sismos"
path = "src/main.rs"

[lib]
name = "sismos"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
soup = "0.5.1"
