[package]
name = "sismos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sismos"
path = "src/main.rs"

[lib]
name = "sismos"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
chrono = "0.4"
dotenvy = "0.15"
env_logger = "0.10"
futures = "0.3"
hex = "0.4"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
soup = "0.5"
sqlx = { version = "0.6", features = ["sqlite", "runtime-actix-rustls", "chrono"] }
urlencoding = "2.1"

[dev-dependencies]
wiremock = "0.5"
